# NyarchTour

./: README.md  install.sh  meson.build  moe.nyarchlinux.tour.json  nyarchtour.flatpak
data/: meson.build  moe.nyarchlinux.tour.appdata.xml.in  moe.nyarchlinux.tour.desktop.in  moe.nyarchlinux.tour.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: carousel_page.ui  main.py  meson.build  nyarchtour.gresource.xml  nyarchtour.in  pages.py  window.py  window.ui
